--- a/P005607.opf/meta.yml
+++ b/P005607.opf/meta.yml
@@ -1,7 +1,7 @@
-id: opecha:P005607
+id: P005607
 initial_creation_type: ocr
 source_metadata:
   id: bdr:W20172
   title: མཐོ་སྒང་གི་ནོར་ནག
-  volume: ''
   author: ''
+  volumes: {}
