--- a/P005607.opf/meta.yml
+++ b/P005607.opf/meta.yml
@@ -4,4 +4,9 @@ source_metadata:
   id: bdr:W20172
   title: མཐོ་སྒང་གི་ནོར་ནག
   author: ''
-  volumes: {}
+  volumes:
+    1b0d821a80fb425d9195d76b549ba9f5:
+      image_group_id: I1KG23336
+      title: ''
+      volume_number: 1
+      total_pages: 104
