--- a/P005607.opf/layers/v001/Pagination.yml
+++ b/P005607.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 0ca29d25fd8640c0b786d81461fde47a
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   01bb85b3ad724bc894b148f1fe34d1a3:
