--- a/P005607.opf/meta.yml
+++ b/P005607.opf/meta.yml
@@ -1,7 +1,7 @@
 id: P005607
 initial_creation_type: ocr
 created_at: 30/03/2020
-last_modified_at: 24/11/2021
+last_modified_at: 2021-12-17 12:06:36.899400
 source_metadata:
   id: bdr:W20172
   title: མཐོ་སྒང་གི་ནོར་ནག
@@ -13,3 +13,5 @@ source_metadata:
       volume_number: 1
       total_pages: 104
       base_file: v001.txt
+  access: http://purl.bdrc.io/admindata/AccessOpen
+  restrictedInChina: false
